--- a/App16.Python/Views/MainWindow.xaml
+++ b/App16.Python/Views/MainWindow.xaml
@@ -19,18 +19,16 @@
             </Grid.ColumnDefinitions>
             <TextBlock Text="Python文件:" FontWeight="Heavy" VerticalAlignment="Center" Margin="5,0,5,0" Grid.Column="0"/>
             <TextBlock x:Name="TxtPath" Text="" VerticalAlignment="Center" Grid.Column="1"/>
-            <Button Click="ButtonSelect_OnClick" Content="选择" Margin="5,5,5,5" Grid.Column="2"/>
+            <Button Click="ButtonSelect_OnClick" Content="选择文件" Margin="5,5,5,5" Grid.Column="2"/>
         </Grid>
         
         <TextBlock x:Name="Block" Margin="5" Grid.Row="1"/>
         
         <WrapPanel Grid.Row="2">
-            <Button Click="ButtonCheck_OnClick" Margin="5">检查venv环境</Button>
-            <Button Click="ButtonRun_OnClick" Margin="5" x:Name="PanelOp">运行Python脚本</Button>
+            <Button Click="ButtonCheck_OnClick" Margin="5">检查venv</Button>
+            <Button Click="ButtonRun_OnClick" Margin="5" x:Name="PanelOp">执行Python脚本</Button>
             
             <TextBlock x:Name="TxtCost" Text=".." VerticalAlignment="Center" HorizontalAlignment="Left"/>
         </WrapPanel>
-        
-        
     </Grid>
 </Window>
