--- a/App11.HIK/Views/ByPageWindow.xaml
+++ b/App11.HIK/Views/ByPageWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="App11.HIK.Views.InPageWindow"
+﻿<Window x:Class="App11.HIK.Views.ByPageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,8 +6,8 @@
         xmlns:converter="clr-namespace:App11.HIK.Converter"
         xmlns:vm="clr-namespace:App11.HIK.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=vm:InPageViewModel, IsDesignTimeCreatable=True}"
-        Title="InPageWindow" Height="700" Width="850">
+        d:DataContext="{d:DesignInstance Type=vm:ByPageViewModel, IsDesignTimeCreatable=True}"
+        Title="ByPageWindow" Height="700" Width="850">
     <Window.Resources>
         <converter:TypeToImageSourceConverter x:Key="TypeToImageSourceConverter" />
     </Window.Resources>
