--- a/App11.HIK/Views/CodeOnlyWindow.xaml
+++ b/App11.HIK/Views/CodeOnlyWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="App11.HIK.Views.CodeWindow"
+﻿<Window x:Class="App11.HIK.Views.CodeOnlyWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
