--- a/App11.HIK/Views/HikViewWindow.xaml
+++ b/App11.HIK/Views/HikViewWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="App11.HIK.Views.Duo2Window"
+﻿<Window x:Class="App11.HIK.Views.HikViewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:control="clr-namespace:App11.HIK.Control"
         mc:Ignorable="d"
-        Title="多设备-2" VerticalContentAlignment="Stretch" Width="800">
+        Title="Control实现" VerticalContentAlignment="Stretch" Width="800">
     <ScrollViewer>
         <Grid>
             <Grid.ColumnDefinitions>
