--- a/App11.HIK/Views/HowToUseHikWindow.xaml
+++ b/App11.HIK/Views/HowToUseHikWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="App11.HIK.Views.XamlWindow"
+﻿<Window x:Class="App11.HIK.Views.HowToUseHikWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,7 +6,7 @@
         xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
         mc:Ignorable="d"
-        Title="HikWindow" Height="500" Width="800">
+        Title="How to use Hik?" Height="500" Width="800">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
