--- a/App11.HIK/Views/MultiHikWindow.xaml
+++ b/App11.HIK/Views/MultiHikWindow.xaml
@@ -1,17 +1,16 @@
-﻿<Window x:Class="App11.HIK.Views.DuoWindow"
+﻿<Window x:Class="App11.HIK.Views.MultiHikWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-        xmlns:vm="clr-namespace:App11.HIK.ViewModels"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=vm:DuoViewModel , IsDesignTimeCreatable=True}"
-        Title="多设备-1" VerticalContentAlignment="Stretch" Width="800">
+        Title="多个设备" VerticalContentAlignment="Stretch" Width="800">
     <ScrollViewer>
-        <ItemsControl ItemsSource="{Binding NodeWcList}">
+        <ItemsControl
+            ItemsSource="{Binding NodeWcList, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" />
