--- a/App11.HIK/Views/HowToUseHikWindow.xaml
+++ b/App11.HIK/Views/HowToUseHikWindow.xaml
@@ -17,7 +17,7 @@
                 <interop:AirspaceDecorator AirspaceMode="None" 
                                            IsInputRedirectionEnabled="True"
                                            IsOutputRedirectionEnabled="True">
-                    <WindowsFormsHost HorizontalAlignment="Stretch">
+                    <WindowsFormsHost HorizontalAlignment="Stretch" x:Name="PART_PlayerHost">
                         <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True" />
                     </WindowsFormsHost>
                 </interop:AirspaceDecorator>
@@ -41,6 +41,7 @@
                 <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" />
                 <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0" />
                 <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
+                <Button x:Name="BtnFull" Content="全屏" Click="ButtonFull_OnClick" Margin="5,0,0,0" />
             </WrapPanel>
         </Grid>
     </Grid>
