--- a/App11.HIK/Control/HikView.xaml
+++ b/App11.HIK/Control/HikView.xaml
@@ -7,23 +7,22 @@
              xmlns:models="clr-namespace:App11.HIK.Models"
              xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=models:JsNode , IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance Type=models:JsNodeWc , IsDesignTimeCreatable=True}"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <Grid Loaded="Control0_OnLoaded" Grid.Row="0">
             <interop:AirspaceDecorator x:Name="Control0"
                                        AirspaceMode="None"
                                        SizeChanged="Control0_OnSizeChanged"
                                        IsInputRedirectionEnabled="True"
                                        IsOutputRedirectionEnabled="True">
                 <WindowsFormsHost HorizontalAlignment="Stretch" x:Name="PART_PlayerHost">
-                    <forms:PictureBox x:Name="VideoControl" BackColor="Black"
-                                      DoubleClick="VideoControl_OnDoubleClick" KeyUp="VideoControl_OnKeyUp"
-                                      AutoSize="True" />
+                    <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True"
+                                      DoubleClick="VideoControl_OnDoubleClick" KeyUp="VideoControl_OnKeyUp" />
                 </WindowsFormsHost>
             </interop:AirspaceDecorator>
 
@@ -43,10 +42,13 @@
         </Grid>
 
         <WrapPanel VerticalAlignment="Bottom" Grid.Row="1">
-            <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" IsEnabled="False" />
             <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0" />
             <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
             <TextBlock Text="{Binding NodeName}" />
+            <TextBlock x:Name="TxtHikStatus" Text="未连接"
+                       Foreground="{DynamicResource SystemControlForegroundAccentBrush}"
+                       HorizontalAlignment="Left" VerticalAlignment="Center"
+                       Margin="5,0,0,0" />
         </WrapPanel>
     </Grid>
 </UserControl>
