--- a/App11.HIK/Views/HikViewWindow.xaml
+++ b/App11.HIK/Views/HikViewWindow.xaml
@@ -1,25 +1,34 @@
 ﻿<Window x:Class="App11.HIK.Views.HikViewWindow"
+        x:Name="Root"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:control="clr-namespace:App11.HIK.Control"
         mc:Ignorable="d"
-        Title="View实现" VerticalContentAlignment="Stretch" Width="800">
-    <ScrollViewer>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <control:HikView x:Name="HikView0" Grid.Row="0" Grid.Column="0"/>
-            <control:HikView x:Name="HikView1" Grid.Row="0" Grid.Column="1"/>
-            <control:HikView x:Name="HikView2" Grid.Row="1" Grid.Column="0"/>
-            <control:HikView x:Name="HikView3" Grid.Row="1" Grid.Column="1"/>
-        </Grid>
-    </ScrollViewer>
+        Title="View实现" VerticalContentAlignment="Stretch" Width="420">
+    <Grid>
+        <ListView ItemsSource="{Binding ElementName=Root, Path=HikList}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                <Border Background="{DynamicResource AppContentBackgroundBrush}" Width="400"
+                                        HorizontalAlignment="Left" CornerRadius="4" Margin="0,0,0,10">
+                                    <Border.Effect>
+                                        <DropShadowEffect x:Name="PART_Shadow" Color="#AA444444"
+                                                          BlurRadius="5" ShadowDepth="4" Opacity="0.5" />
+                                    </Border.Effect>
+
+                                    <control:HikView NodeHik="{Binding}" />
+
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+        </ListView>
+    </Grid>
 </Window>
