--- a/App16.Python/Views/MainWindow.xaml
+++ b/App16.Python/Views/MainWindow.xaml
@@ -22,14 +22,15 @@
             </Grid.ColumnDefinitions>
             <TextBlock Text="Python文件:" FontWeight="Heavy" VerticalAlignment="Center" Margin="5,0,5,0" Grid.Column="0"/>
             <TextBlock x:Name="TxtPath" Text="" VerticalAlignment="Center" Grid.Column="1"/>
-            <Button Click="ButtonSelect_OnClick" Content="选择文件" Margin="5,5,5,5" Grid.Column="2"/>
+            <Button Click="ButtonSelect_OnClick" Content="选择脚本" Margin="5,5,5,5" Grid.Column="2" />
         </Grid>
         
         <Grid Grid.Row="1">
             <wpf:CartesianChart Series="{Binding Series}" XAxes="{Binding XAxes}" YAxes="{Binding YAxes}" />
         </Grid>
-        
-        <TextBlock x:Name="Block" Margin="5" Grid.Row="1"/>
+
+        <TextBlock MouseEnter="UIElement_OnMouseEnter" MouseLeave="UIElement_OnMouseLeave" x:Name="Block" Margin="5"
+                   Grid.Row="1" />
         
         <WrapPanel Grid.Row="2">
             <Button Click="ButtonCheck_OnClick" Margin="5">检查venv</Button>
