App11:更新绑定的数据源

--- a/App11.HIK/App.xaml
+++ b/App11.HIK/App.xaml
@@ -31,7 +31,7 @@
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
-            <DataTemplate DataType="{x:Type models:JsNode}">
+            <DataTemplate DataType="{x:Type models:JsNodeHik}">
                 <ct:HikView />
             </DataTemplate>
         </ResourceDictionary>
