--- a/App17.Login/Views/MainWindow.xaml
+++ b/App17.Login/Views/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:App17.Login.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-        Title="MainWindow" Height="450" Width="800">
+        d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
+        Title="App17 登录保持与数据请求" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -17,7 +17,39 @@
             <Button Click="ButtonData_OnClick" Margin="5">数据</Button>
         </WrapPanel>
         <ScrollViewer Grid.Row="1">
-            <TextBlock Name="TxtRepo" TextWrapping="Wrap" />
+            <StackPanel>
+                <Grid>
+                    <Grid.Resources>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Margin" Value="5" />
+                        </Style>
+                    </Grid.Resources>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="2*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="30" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="设备ID" />
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Water.DeviceId}" />
+                    <TextBlock Grid.Row="0" Grid.Column="2" Text="溶解氧(mg/L)" />
+                    <TextBlock Grid.Row="0" Grid.Column="3" Text="{Binding Water.OxygenVal}" />
+                    <TextBlock Grid.Row="0" Grid.Column="4" Text="PH" />
+                    <TextBlock Grid.Row="0" Grid.Column="5" Text="{Binding Water.PhVal}" />
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="水温(℃)" />
+                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Water.TemperatureVal}" />
+                    <TextBlock Grid.Row="1" Grid.Column="2" Text="时间" />
+                    <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding Water.CreateTime}" />
+                </Grid>
+
+                <TextBlock Text="{Binding TxtRepo}" TextWrapping="Wrap" />
+            </StackPanel>
         </ScrollViewer>
     </Grid>
 </Window>
